# scipy

./: meson.build  pyproject.toml
scipy/constants/: meson.build
scipy/fft/: meson.build
scipy/fft/_pocketfft/: meson.build
scipy/ndimage/: meson.build
scipy/odr/: meson.build
